# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: main.yml
configuration/: production.yaml
migrations/: 20220810142357_create_subscriptions_table.sql  20220911065158_make_status_not_null_in_subscriptions.sql  20220911072145_create_subscription_tokens_table.sql  20221026131942_create_users_table.sql  20221030070759_add_salt_to_users.sql  20230128165525_create_idempotency_table.sql  20230128165637_create_newsletter_issues_table.sql  20230128173419_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
