[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "time", "migrate", "offline"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.14"
fake = "~2.3"
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.16"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
linkify = "0.8"
